--- a/package.json
+++ b/package.json
@@ -15,11 +15,21 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.12.18",
+    "matter-js": "^0.19.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.14.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/matter-js": "^0.18.5",
+    "@types/react-scroll": "^1.8.7"
   }
 }
